# Elsewhere

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
docs/: configuration.md  renderers.md
examples/zola/: elsewhere.toml  zola.toml
examples/zola/content/writing/: example-post.md
src/: app.rs  cli.rs  config.rs  error.rs  frontmatter.rs  main.rs  plan.rs  post.rs  target.rs  templates.rs  workspace.rs
src/renderers/: bluesky.rs  markdown.rs  mastodon.rs  mod.rs  reddit.rs  substack.rs
src/sources/: generic.rs  generic_markdown.rs  markdown.rs  mod.rs  zola.rs
